[workspace]
resolver = "2"
members = [
    "openthread",
    "openthread-sys",
]

exclude = ["examples", "xtask"]

[workspace.dependencies]
log = { version = "0.4", default-features = false }
defmt = { version = "1.0", default-features = false }
scopeguard = { version = "1", default-features = false }
rand_core = { version = "0.9", default-features = false }
embassy-sync = { version = "0.8", default-features = false }
embassy-time = { version = "0.5", default-features = false }
embassy-futures = { version = "0.1", default-features = false }
heapless = { version = "0.9", default-features = false }
bitflags = { version = "2.5", default-features = false }
embassy-net-driver-channel = { version = "0.4", default-features = false }
esp-radio = { version = "0.18", default-features = false }
embassy-nrf = { version = "0.10", default-features = false }
portable-atomic = { version = "1", default-features = false }

mbedtls-rs-sys = { version = "0.1", default-features = false }
openthread-sys = { version = "0.2", path = "openthread-sys", default-features = false }

# build dependencies
anyhow = { version = "1", default-features = false }
bindgen = { version = "0.72", default-features = false }
env_logger = { version = "0.11", default-features = false }
cmake = { version = "0.1.52", default-features = false }
cc = { version = "1.1", default-features = false }
fs_extra = { version = "1.3", default-features = false }
embuild = { version = "0.33", default-features = false }
