[package]
name = "esp-openthread-examples"
version = "0.1.0"
edition = "2021"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["thread", "openthread", "embedded", "embassy"]
description = "openthread examples for Espressif chips"
repository = "https://github.com/esp-rs/openthread"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.84"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "z"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
opt-level = "z"
lto = "fat"
debug = 2
debug-assertions = false
overflow-checks = false

[features]
default = ["esp32c6"]
esp32c6 = ["esp-rtos/esp32c6", "esp-radio/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6", "esp-bootloader-esp-idf/esp32c6"]
esp32h2 = ["esp-rtos/esp32h2", "esp-radio/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2", "esp-bootloader-esp-idf/esp32h2"]

[patch.crates-io]
esp-hal = { git = "https://github.com/ivmarkov/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }
esp-rtos = { git = "https://github.com/ivmarkov/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }
esp-alloc = { git = "https://github.com/ivmarkov/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }
esp-backtrace = { git = "https://github.com/ivmarkov/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }
esp-println = { git = "https://github.com/ivmarkov/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }
esp-radio = { git = "https://github.com/ivmarkov/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }
esp-bootloader-esp-idf = { git = "https://github.com/ivmarkov/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }

[dependencies]
embassy-executor = "0.9"
embassy-sync = "0.7"
embassy-futures = "0.1"
embassy-time = "0.5"
embassy-net = { version = "0.7", features = ["proto-ipv6", "medium-ip", "udp", "log"] }
esp-hal = { version = "1", features = ["log-04", "unstable", "exception-handler"] }
esp-rtos = { version = "0.2", features = ["esp-radio", "embassy"] }
esp-alloc = { version = "0.9" }
esp-backtrace = { version = "0.18.1", features = ["panic-handler", "println"] }
esp-println = { version = "0.16.1", features = ["log-04"] }
esp-radio = { version = "0.17", features = ["unstable", "ieee802154"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["log-04"] }
log = "0.4"
heapless = "0.8"
critical-section = "1.2"
rand_core = "0.9"
static_cell = "2.1"

openthread = { path = "../../openthread", features = ["udp", "srp", "embassy-net-driver-channel", "esp-radio", "isupper", "log"] }
tinyrlibc = { version = "0.5", default-features = false, features = ["utoa", "strtoul"] }

[[bin]]
path = "./src/bin/basic_enet.rs"
name = "basic_enet"
#required-features = ["embassy-net-driver-channel"]
harness = false

[[bin]]
path = "./src/bin/basic_udp.rs"
name = "basic_udp"
#required-features = ["udp"]
harness = false

[[bin]]
path = "./src/bin/srp.rs"
name = "srp"
#required-features=["srp"]
harness = false
