[package]
name = "esp-openthread-examples"
version = "0.1.0"
edition = "2021"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["thread", "openthread", "embedded", "embassy"]
description = "openthread examples for Espressif chips"
repository = "https://github.com/esp-rs/openthread"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.84"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "z"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
opt-level = "z"
lto = "fat"
debug = 2
debug-assertions = false
overflow-checks = false

[features]
default = ["esp32c6"]
esp32c6 = ["esp-rtos/esp32c6", "esp-radio/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6", "esp-bootloader-esp-idf/esp32c6"]
esp32h2 = ["esp-rtos/esp32h2", "esp-radio/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2", "esp-bootloader-esp-idf/esp32h2"]

force-generate-bindings = ["openthread/force-generate-bindings"]

[dependencies]
embassy-executor = "0.10"
embassy-sync = "0.8"
embassy-futures = "0.1"
embassy-time = "0.5"
embassy-net = { version = "0.8", features = ["proto-ipv6", "medium-ip", "udp", "log"] }
esp-hal = { version = "~1.1", features = ["log-04", "unstable", "exception-handler"] }
esp-rtos = { version = "0.3", features = ["esp-radio", "embassy"] }
esp-alloc = { version = "0.10" }
esp-backtrace = { version = "0.19", features = ["panic-handler", "println"] }
esp-println = { version = "0.17", features = ["log-04"] }
esp-radio = { version = "0.18", features = ["unstable", "ieee802154"] }
esp-bootloader-esp-idf = { version = "0.5", features = ["log-04"] }
log = "0.4"
heapless = "0.8" # for esp-radio
critical-section = "1.2"
rand_core = "0.9"
static_cell = "2.1"

openthread = { path = "../../openthread", features = ["udp", "srp", "dns-client", "embassy-net-driver-channel", "esp-radio", "isupper", "log"] }
tinyrlibc = { version = "0.5", default-features = false, features = ["utoa", "strtoul"] }

[[bin]]
path = "./src/bin/basic_enet.rs"
name = "basic_enet"
#required-features = ["embassy-net-driver-channel"]
harness = false

[[bin]]
path = "./src/bin/basic_udp.rs"
name = "basic_udp"
#required-features = ["udp"]
harness = false

[[bin]]
path = "./src/bin/srp.rs"
name = "srp"
#required-features=["srp"]
harness = false

[[bin]]
path = "./src/bin/dns.rs"
name = "dns"
#required-features=["dns-client"]
harness = false
